--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Website design, SEO and Content Writng for Serious brands">
-	<meta name="author" content="Acys Bamif">
+	<meta name="author" content="Mubarak Balogun">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Acys Bamif: Wordpreess Website Developer</title>
+	<title>The B Mubarak: Wordpress Website Developer</title>
 	<script src="https://kit.fontawesome.com/0c60fc5e1d.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
@@ -32,7 +32,7 @@
 				<h1>Building High Converting Websites & Landing Pages</h1>
 				<p>In the Sea of ordinary, Make your business thrive like never before with websites and landing pages that are designed to bring maximum conversions and boost your sales.<br>
 				<small>My Name: Balogun Mubarak.</small></p>
-				<a href="mailto:acysbamif@gmail.com" class="button">Let's Connect</a>
+				<a href="mailto:thebmubarak@gmail.com" class="button">Let's Connect</a>
 			</div>
 		</div>
 	</header>
@@ -48,7 +48,7 @@
 	<h2 class="sub-head">About Acys Bamif</h2>
 	<div>
 		<p class="block">I'm a professional web designer specializing on high converting landing pages and websites that bring you new leads and customers.<br> With over 5 years of experience in <b>Front-End Development, Wordpress and Shopify</b>, I design & build Websites for both market leaders and startups.
-		<a href="mailto:acysbamif@gmail.com" class="button">Let's Connect</a>
+		<a href="mailto:thebmubarak@gmail.com" class="button">Let's Connect</a>
 	</div>
 	<div>
 		<img class="img" src="images/coder.webp"  alt="coder">
@@ -150,7 +150,7 @@
 				<p>Once the project is ready, I handle the launch and provide ongoing support to optimize performance and ensure long-term success.</p>
 			</div>
 		</div>
-		<a href="mailto:acysbamif@gmail.com" class="button">Let's Connect</a>
+		<a href="mailto:thebmubarak@gmail.com" class="button">Let's Connect</a>
 		
 	</section>
 		
@@ -224,23 +224,23 @@
 		
 		<div>
 			<div class="block">
-				<p>"Acys's expertise and attention to detail are unparalleled."</p>
+				<p>"Mubarak's expertise and attention to detail are unparalleled."</p>
 				<img src="images/brand (0).png" alt="brand image">
 			</div>
 			<div class="block">
-				<p>"Acys is one of the first I ask for advice on digital marketing. He really knows his SEO."</p>
+				<p>"Mubarak is one of the first I ask for advice on digital marketing. He really knows his SEO."</p>
 				<img src="images/brand (8).png" alt="brand image">
 			</div>
 			<div class="block">
-				<p>"Acys delivered a website that exceeded all my expectations."</p>
+				<p>"I can't believe he delivered a website that exceeded all my expectations."</p>
 				<img src="images/brand (7).png" alt="brand image">
 			</div>
 			<div class="block">
-				<p>"Acys has been a great asset to developing our brands online."</p>
+				<p>"You've been a great asset to developing our brands online."</p>
 				<img src="images/brand (6).png" alt="brand image">
 			</div>
 		</div>
-		<a href="mailto:acysbamif@gmail.com" class="button">Let's Connect</a>
+		<a href="mailto:thebmubarak@gmail.com" class="button">Let's Connect</a>
 		
 	</section>
 	
@@ -252,7 +252,7 @@
 		<div>
 			<p class="block">I'm the <big>Best Developer</big> in the Wordpress and Shopify sector that offers <b>100% satisfaction guaranteed Work.</b> <br> <small>You bear no risk; all the Risk is On Me.</small></p>
 			<p>Are you ready to ascend <big>THE APEX</big> of Your Niche</p>
-			<a href="mailto:acysbamif@gmail.com" class="button">Let's Connect</a>
+			<a href="mailto:thebmubarak@gmail.com" class="button">Let's Connect</a>
 		</div>
 		<div>
 			<img class="img" src="images/project4.jpg"  alt="project4">
@@ -263,14 +263,14 @@
 	<footer>
 		<div class="icons">
 			<a href="mailto:acysbamif@gmail.com"><i class="fa fa-envelope-o"></i><small><small>acysbamif@gmail.com</small></a>
-			<a href="https://www.instagram.com/acysbamif"><i class="fa fa-instagram"></i><small>@acysbamif</small></a>
+			<a href="https://www.instagram.com/thebmubarak"><i class="fa fa-instagram"></i><small>@acysbamif</small></a>
 			<a href="https://www.codepen.io/Acys"><i class="fa fa-codepen"></i><small>Acys Bamif</small></a>
 			<a href="https://www.facebook.com/profile.php?id=100060012433390"><i class="fa fa-facebook"></i><small>Acys&nbsp;Bamif</small></a>
-			<a href="https://www.github.com/Acys-Bamif"><i class="fa fa-github"></i><small>Acys&nbsp;Bamif</small></a>
+			<a href="https://www.github.com/thebmubarak"><i class="fa fa-github"></i><small>Acys&nbsp;Bamif</small></a>
 			<a href="https://www.linkedin.com/in/acys-bamif"><i class="fa fa-linkedin"></i><small>Acys&nbsp;Bamif</small></a>
 		</div>
 		
-		<p>©2024 Acys Bamif.</p>
+		<p>©2024 Mubarak Balogun.</p>
 	</footer>
 	
 <!--external script link-->
