--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <!--call to action-->
 <section class="padded" id="about">
 	
-	<h2 class="sub-head">About Acys Bamif</h2>
+	<h2 class="sub-head">About Mubarak</h2>
 	<div>
 		<p class="block">I'm a professional web designer specializing on high converting landing pages and websites that bring you new leads and customers.<br> With over 5 years of experience in <b>Front-End Development, Wordpress and Shopify</b>, I design & build Websites for both market leaders and startups.
 		<a href="mailto:thebmubarak@gmail.com" class="button">Let's Connect</a>
