--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 	<meta name="description" content="Website design, SEO and Content Writng for Serious brands">
 	<meta name="author" content="Mubarak Balogun">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>The B Mubarak: Wordpress Website Developer</title>
+	<title>ApexBam: Website Developer</title>
 	<script src="https://kit.fontawesome.com/0c60fc5e1d.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="css/style.css">
-	<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+	<link rel="shortcut icon" href="images/myfavicon.png" type="image/x-icon">
 <body>
 
 <!--top collapsible navigation on small screen and full on large-->
 	<nav class="nav">
-		<img src="images/logo.png" alt="apexcys logo">
+		<img src="images/mylogo.png" alt="apexbam logo">
 	</nav>
 	
 <div class="toTop"><a href="#">∆</a></div>
@@ -29,10 +29,10 @@
 	<header class="header-main bg-ddf">
 		<div class="header-outer">
 			<div class="header-inner">
-				<h1>Building High Converting Websites & Landing Pages</h1>
-				<p>In the Sea of ordinary, Make your business thrive like never before with websites and landing pages that are designed to bring maximum conversions and boost your sales.<br>
-				<small>My Name: Balogun Mubarak.</small></p>
-				<a href="mailto:thebmubarak@gmail.com" class="button">Let's Connect</a>
+				<h1>Crafting High Converting Websites & Landing Pages</h1>
+				<p>Stand out in a sea of ordinary. Elevate your business with custom websites and landing pages designed to maximize conversions and supercharge your sales.<br>
+				<small>Founder: Balogun Mubarak.</small></p>
+				<a href="mailto:apexbamif@gmail.com" class="button">Let's Connect</a>
 			</div>
 		</div>
 	</header>
@@ -45,10 +45,10 @@
 <!--call to action-->
 <section class="padded" id="about">
 	
-	<h2 class="sub-head">About Mubarak</h2>
+	<h2 class="sub-head">About ApexBam</h2>
 	<div>
-		<p class="block">I'm a professional web designer specializing on high converting landing pages and websites that bring you new leads and customers.<br> With over 5 years of experience in <b>Front-End Development, Wordpress and Shopify</b>, I design & build Websites for both market leaders and startups.
-		<a href="mailto:thebmubarak@gmail.com" class="button">Let's Connect</a>
+		<p class="block">At ApexBam, we specialize in designing high-converting websites and landing pages that drive new leads and customers to your business. With over 3 years of experience in Front-End Development, WordPress, and Shopify, we deliver tailored web solutions for both market leaders and startups, ensuring your online presence not only stands out but also delivers results.</p>
+		<a href="mailto:apexbamif@gmail.com" class="button">Let's Connect</a>
 	</div>
 	<div>
 		<img class="img" src="images/coder.webp"  alt="coder">
@@ -59,7 +59,7 @@
 <!--brands section-->
 	<section class="padded" id="brand">
 	
-		<h2 class="sub-head">My Brand Collaborations</h2>
+		<h2 class="sub-head">Our Brand Collaborations</h2>
 		
 		<div class="slider">
 			<div class="slide-track">
@@ -81,6 +81,12 @@
 				<div class="slide">
 					<img src="images/brand (6).png"  alt="brand image" />
 				</div>
+				<div class="slide">
+					<img src="images/brand (11).png"  alt="brand image" />
+				</div>
+				<div class="slide">
+					<img src="images/brand (12).png"  alt="brand image" />
+				</div>
 			</div>
 		</div>
 	</section>
@@ -89,7 +95,7 @@
 <!--services section-->
 	<section class="padded" id="service">
 	
-		<h2 class="sub-head">My Solutions</h2>
+		<h2 class="sub-head">Our Solutions</h2>
 		
 		<div class="services">
 		
@@ -99,7 +105,7 @@
 				</div>
 				<div>
 					<h3>Website Design & SEO</h3>
-					<p>My SEO-optimized websites are crafted to perfection, ensuring that your Exceptional Products and  Services are presented in the best possible light to your target audience.</p>
+					<p>Our SEO-optimized websites are crafted to perfection, ensuring that your Exceptional Products and  Services are presented in the best possible light to your target audience.</p>
 				</div>
 			</div>
 			
@@ -109,7 +115,7 @@
 				</div>
 				<div>
 					<h3>Content Writing</h3>
-					<p>My SEO-Friendly and Keyword-rich Website & Blog content are tailored to showcasing your Products and services to the right audience, driving brand awareness, Traffic and sales.</p>
+					<p>Our SEO-Friendly and Keyword-rich Website & Blog content are tailored to showcasing your Products and services to the right audience, driving brand awareness, Traffic and sales.</p>
 				</div>
 			</div>
 			
@@ -119,7 +125,7 @@
 				</div>
 				<div>
 					<h3>Virtual assistance and Management</h3>
-					<p>My remote support services provide seamless operations for your brand, allowing you to focus on creating exceptional products and services while we handle the rest.</p>
+					<p>Our remote support services provide seamless operations for your brand, allowing you to focus on creating exceptional products and services while we handle the rest.</p>
 				</div>
 			</div>
 		</div>
@@ -135,22 +141,22 @@
 			<div>
 				<img src="images/process1.gif" alt="process1">
 				<h3>Research and Planning</h3>
-				<p>I begin by thoroughly understanding your needs, goals, and preferences to lay a strong foundation for the project.</p>
+				<p>We begin by thoroughly understanding your needs, goals, and preferences to lay a strong foundation for the project.</p>
 			</div>
 			
 			<div>
 				<img src="images/process2.gif" alt="process2">
 				<h3>Design and Development</h3>
-				<p>I give a customized design and strategy based on the initial research, ensuring a tailored approach to meet your requirements.</p>
+				<p>We give a customized design and strategy based on the initial research, ensuring a tailored approach to meet your requirements.</p>
 			</div>
 			
 			<div>
 				<img src="images/process3.gif" alt="process3">
 				<h3>Launch and Support</h3>
-				<p>Once the project is ready, I handle the launch and provide ongoing support to optimize performance and ensure long-term success.</p>
+				<p>Once the project is ready, We handle the launch and provide ongoing support to optimize performance and ensure long-term success.</p>
 			</div>
 		</div>
-		<a href="mailto:thebmubarak@gmail.com" class="button">Let's Connect</a>
+		<a href="mailto:apexbamif@gmail.com" class="button">Let's Connect</a>
 		
 	</section>
 		
@@ -160,6 +166,7 @@
 	<section class="padded" id="project">
 
 		<h2 class="sub-head">Case Studies</h2>
+		<p class="block2">It's only a drop in the ocean compared to the entire list.</p>
 		<div class="project">
 			<div class="project-div">
 				<img src="images/project1.jpg">
@@ -224,35 +231,97 @@
 		
 		<div>
 			<div class="block">
-				<p>"Mubarak's expertise and attention to detail are unparalleled."</p>
+				<p>"You know what's funny about the blog is you actually found some stuff that I didn't know, so I'm actually reading my own website to learn some stuff,LOL it's a job well done."</p>
+				<img src="images/brand (12).png" alt="brand image">
+			</div>
+			<div class="block">
+				<p>"It all looks good now, I'm looking forward to working with you again."</p>
+				<img src="images/brand (11).png" alt="brand image">
+			</div>
+			<div class="block">
+				<p>"I still can't imagine what my website might look like without you, I'm mostly impressed by the way you fixed my navigation."</p>
 				<img src="images/brand (0).png" alt="brand image">
-			</div>
-			<div class="block">
-				<p>"Mubarak is one of the first I ask for advice on digital marketing. He really knows his SEO."</p>
-				<img src="images/brand (8).png" alt="brand image">
-			</div>
-			<div class="block">
-				<p>"I can't believe he delivered a website that exceeded all my expectations."</p>
-				<img src="images/brand (7).png" alt="brand image">
 			</div>
 			<div class="block">
 				<p>"You've been a great asset to developing our brands online."</p>
 				<img src="images/brand (6).png" alt="brand image">
 			</div>
 		</div>
-		<a href="mailto:thebmubarak@gmail.com" class="button">Let's Connect</a>
+		<a href="mailto:apexbamif@gmail.com" class="button">Let's Connect</a>
 		
 	</section>
+
+<!--faq section-->
+	<section class="padded" id="faq">
 	
+		<h2 class="sub-head">Frequently Asked Questions</h2>
+		<ul>
+			<li>
+				<label>
+					<input type="checkbox" checked="">
+					<i></i>
+					<h4>Do you offer your services to every business niche?</h4>
+					<p>We only focus is elevating SERIOUS brands through website design, SEO and Marketing, We can only help if you are <big><b>READY</b></big> to take your business to the next level.</p>
+				</label>
+			</li>
+			
+			<li>
+				<label>
+					<input type="checkbox" checked="">
+					<i></i>
+					<h4>How long does it take to develop a Professional website?</h4>
+					<p>The timeline for developing a professional website depends on the complexity of the project and the client's specific requirements. We work closely with our clients to establish a realistic timeline and ensure timely delivery.</p>
+				</label>
+			</li>
+			
+			<li>
+				<label>
+					<input type="checkbox" checked="">
+					<i></i>
+					<h4>What is the cost of a Professsional website?</h4>
+					<p>The cost of a Professsional website varies depending on the scope of the project and the specific services required. We provide customized quotes based on each client's unique needs and budget.</p>
+				</label>
+			</li>
+		
+			<li>
+				<label>
+					<input type="checkbox" checked="">
+					<i></i>
+					<h4>What is the process for updating a Professional website?</h4>
+					<p>We offer ongoing maintenance and support services to ensure that your  websites remain up-to-date and optimized for performance. Our team works closely with clients to identify areas for improvement and implement updates as needed.</p>
+				</label>
+			</li>
+			
+			<li>
+				<label>
+					<input type="checkbox" checked="">
+					<i></i>
+					<h4>How does Apexcys optimize My websites for search engines?</h4>
+					<p>We use a range of SEO techniques, including keyword research, on-page optimization, link building, and content creation, to ensure that your Professional websites rank well in search engine results pages.</p>
+				</label>
+			</li>
+			
+			<li>
+				<label>
+					<input type="checkbox" checked="">
+					<i></i>
+					<h4>What is the process for maintaining my Professsional website?</h4>
+					<p>We offer ongoing maintenance and support services to ensure that Your websites remain secure, up-to-date, and optimized for performance. Our team handles updates, backups, and security monitoring to ensure that the website runs smoothly and efficiently.</p>
+				</label>
+			</li>
+		</ul>
+		
+	</section>
+
 
 <!--call to action-->
 	<section class="padded" id="cta">
 	
 		<h2 class="sub-head">The Ultimate Benefits</h2>
 		<div>
-			<p class="block">I'm the <big>Best Developer</big> in the Wordpress and Shopify sector that offers <b>100% satisfaction guaranteed Work.</b> <br> <small>You bear no risk; all the Risk is On Me.</small></p>
+			<p class="block">We are the <big>Best Agency</big> in the Web site Design and  Marketing sector that offers <b>100% satisfaction guarantee.</b> <br> <small>You bear no risk; all the Risk is On Us.</small></p>
 			<p>Are you ready to ascend <big>THE APEX</big> of Your Niche</p>
-			<a href="mailto:thebmubarak@gmail.com" class="button">Let's Connect</a>
+			<a href="mailto:apexbamif@gmail.com" class="button">Let's Connect</a>
 		</div>
 		<div>
 			<img class="img" src="images/project4.jpg"  alt="project4">
@@ -262,15 +331,12 @@
 	
 	<footer>
 		<div class="icons">
-			<a href="mailto:acysbamif@gmail.com"><i class="fa fa-envelope-o"></i><small><small>acysbamif@gmail.com</small></a>
-			<a href="https://www.instagram.com/thebmubarak"><i class="fa fa-instagram"></i><small>@acysbamif</small></a>
-			<a href="https://www.codepen.io/Acys"><i class="fa fa-codepen"></i><small>Acys Bamif</small></a>
+			<a href="mailto:apexbamif@gmail.com"><i class="fa fa-envelope-o"></i><small><small>acysbamif@gmail.com</small></a>
+			<a href="https://www.instagram.com/apex_bam"><i class="fa fa-instagram"></i><small>@acysbamif</small></a>
 			<a href="https://www.facebook.com/profile.php?id=100060012433390"><i class="fa fa-facebook"></i><small>Acys&nbsp;Bamif</small></a>
-			<a href="https://www.github.com/thebmubarak"><i class="fa fa-github"></i><small>Acys&nbsp;Bamif</small></a>
-			<a href="https://www.linkedin.com/in/acys-bamif"><i class="fa fa-linkedin"></i><small>Acys&nbsp;Bamif</small></a>
 		</div>
 		
-		<p>©2024 Mubarak Balogun.</p>
+		<p>©2024 ApexBam.</p>
 	</footer>
 	
 <!--external script link-->
